# Rule-Based-Auto-Remediation-For-Windows-

./: .env.example  .gitignore  ADMINISTRATIVE_EVENTS_REFACTOR.md  BUILD_MANUAL_INSTRUCTIONS.md  COLOR_CODING_GUIDE.md  CRITICAL_FIXES_APPLIED.md  DASHBOARD_DEMO_README.md  DASHBOARD_ENHANCEMENTS.md  DEMO_QUICK_CARD.md  DOCUMENTATION_INDEX.md  Extreme_Detailed_Project_Report_For_PPT.docx  FIX_PRIORITY.md  FLUTTER_INTEGRATION_COMPLETION_REPORT.md  FLUTTER_VALIDATION_TESTS.md  FUNCTIONALITY_AUDIT.md  GLASS_DESIGN_CHANGES.md  HISTORICAL_EVENTS_GUIDE.md  HISTORICAL_IMPORT_FIX.md  HOW_TO_RUN_DEMO.md  IMPLEMENTATION_SUMMARY_THREE_IMPROVEMENTS.md  IMPROVEMENT_STRATEGY.md  INTEGRATION_SUMMARY.md  LAUNCH_GUIDE.md  LEVEL_COLUMN_UPDATE.md  LIVE_MONITORING_GUIDE.md  LIVE_MONITORING_SUMMARY.md  NOW_BUILD.bat  PERFORMANCE_OPTIMIZATIONS.md  POC_IMPLEMENTATION_VALIDATION.py  PRIORITY_2_3_FIXES_IMPLEMENTED.md  PROJECT_ANALYSIS.md  PROJECT_CODEBASE_ANALYSIS.md  PROOF_OF_CONCEPT_WORKING.md  Project_Details_Rule_Based_Auto_Remediation.docx  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_BACKEND_FIX.txt  QUICK_START_FIX.md  QUICK_START_GUIDE.md  README.md  (+47 more)
backend/: analytics.py  app.py  cli_process_event.py  db_init.py  event_dump.txt  event_log_monitor.py  fix.py  fix_event_levels.py  (+15 more)
frontend/windows/: CMakeLists.txt
frontend/windows/flutter/ephemeral/: generated_config.cmake
frontend/windows/flutter/ephemeral/.plugin_symlinks/: jni  path_provider_windows  url_launcher_windows
frontend/windows/runner/: flutter_window.h  main.cpp  utils.cpp  utils.h  win32_window.cpp  win32_window.h
(+167 files in other folders)
